# forecast-estoque-mlops

./: .env.example  .gitignore  README.md  requirements.txt
.github/workflows/: ci.yml
artifacts/: drift_reference.json  lgbm_walmart_cost.txt  lgbm_walmart_cost_preprocess.json
artifacts/downloads/monitoring/: drift_reference.json
flows/: batch_inference_flow.py
forecast/: pyproject.toml
forecast/app/: streamlit_app.py
forecast/flows/: prefect_flow.py
forecast/reports/: batch_predictions.parquet
forecast/src/: config.py  cost.py  split.py
forecast_estoque_mlops.egg-info/: PKG-INFO  SOURCES.txt
reports/: batch_predictions_2026-02-09_182410.parquet  valid_predictions.parquet
src/: baseline.py  features.py  io.py  metrics.py  predict.py  train_lgbm.py
src/monitoring/: drift.py
